--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@ $icon-font-path: '../fonts/';
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+// @import "bootstrap.min.css";
 // endbower
 
 @import "layout";
