--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -12,10 +12,9 @@
   height: 400px;
 }
 
-@media only screen
-        and (orientation: landscape) {
+@media only screen and (orientation: landscape) {
   #allPosts {
-    height: 250px;
+    height: 150px;
   }
 }
 
@@ -31,3 +30,46 @@
     }
   }
 }
+
+#imageCarousel {
+  .fa-refresh {
+    position: absolute;
+    font-size: 24px;
+    left: 50%;
+    top: 50%;
+    margin-left: -12px;
+    margin-top: -12px;
+    z-index: 1;
+    color: white;
+    display: none;
+  }
+
+  &.loading {
+    .fa-refresh {
+      display: inline-block
+    }
+  }
+
+  #imagePlaceholder {
+    width: 100%;
+  }
+}
+
+
+#photos {
+  .initialising {
+    #imageCarousel {
+      display: none;
+    }
+
+    .alert {
+      display: block;
+    }
+  }
+
+  .alert {
+    display: none;
+  }
+
+}
+
